2013-11-16  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.14.2 released.

	* Compatibility fix for logging in with Django 1.6.

2013-11-01  Raymond Penners  <raymond.penners@intenct.nl>

	* Maksim Rukomoynikov contributed a Russian translation, thanks!

2013-10-28  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.14.1 released (PyPi did not render the README.rst
   	  properly).

	* Version 0.14.0 released.

2013-10-19  Raymond Penners  <raymond.penners@intenct.nl>

	* Stuart Ross contributed AngelList support, thanks!

2013-10-16  Raymond Penners  <raymond.penners@intenct.nl>

	* LinkedIn: profile fields that are to be fetched are now
	configurable (`PROFILE_FIELDS` provider-level setting).

2013-10-13  Raymond Penners  <raymond.penners@intenct.nl>

	* Udi Oron contributed a Hebrew translation, thanks!

2013-10-09  Raymond Penners  <raymond.penners@intenct.nl>

	* Add setting `ACCOUNT_DEFAULT_HTTP_PROTOCOL` (HTTPS support).

	* George Whewell contributed Instagram support, thanks!

2013-09-09  Raymond Penners  <raymond.penners@intenct.nl>

	* Refactored adapter methods relating to creating and populating
	`User` instances.

2013-09-05  Raymond Penners  <raymond.penners@intenct.nl>

	* User creation methods in the `Default(Social)AccountAdapter` now
	have access to the `request`.

2013-08-31  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.13.0 released.

2013-08-30  Raymond Penners  <raymond.penners@intenct.nl>

	* Koichi Harakawa contributed a Japanese translation, thanks!

	* Added `is_open_for_signup` to DefaultSocialAccountAdapter.

2013-08-29  Raymond Penners  <raymond.penners@intenct.nl>

	* Added VK provider support.

2013-08-16  Raymond Penners  <raymond.penners@intenct.nl>

	* Marcin Spoczynski contributed a Polish translation, thanks!

2013-07-23  Raymond Penners  <raymond.penners@intenct.nl>

	* All views are now class-based.

	* The password reset from key success response now redirects to a