@@ -1,3 +1,7 @@
+2013-11-17  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: Added support for `ACCOUNT_CONFIRM_EMAIL_ON_GET`.
+
 2013-11-16  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.14.2 released.
